[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/MotleyForcesRegular-w1rZ3.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/cat_sprites.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/FishCoin.png" type="Texture" id=3]
[ext_resource path="res://ui/selection_menu/SelectionMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/nav_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/selection_menu/LevelSelection.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 432, 144, 144, 144 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 144, 144, 144 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 144, 144 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "average_cat",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="SelectionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0196078, 0.172549, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="TopBar" type="AspectRatioContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 100.0
alignment_horizontal = 2

[node name="TopBanner" type="ColorRect" parent="VBoxContainer/TopBar"]
margin_left = 124.0
margin_right = 1024.0
margin_bottom = 100.0
rect_min_size = Vector2( 900, 100 )
color = Color( 0, 0, 0, 0.627451 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopBar"]
margin_left = 800.0
margin_right = 1024.0
margin_bottom = 100.0

[node name="BackButton" type="Button" parent="VBoxContainer/TopBar/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
flat = true
icon_align = 1

[node name="Label" type="Label" parent="VBoxContainer/TopBar/HBoxContainer/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.866667, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "< Back"
align = 1
valign = 1

[node name="GoldDisplay" type="HBoxContainer" parent="VBoxContainer/TopBar/HBoxContainer"]
margin_left = 104.0
margin_right = 224.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 0 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TopBar/HBoxContainer/GoldDisplay"]
margin_right = 50.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="GoldCount" type="Label" parent="VBoxContainer/TopBar/HBoxContainer/GoldDisplay"]
margin_left = 54.0
margin_top = 40.0
margin_right = 65.0
margin_bottom = 59.0
custom_colors/font_color = Color( 1, 0.819608, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
valign = 1

[node name="MiddleContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 494.0
rect_min_size = Vector2( 0, 390 )
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MiddleContainer"]
margin_left = 160.0
margin_right = 660.0
margin_bottom = 390.0
rect_min_size = Vector2( 500, 300 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/MiddleContainer/CenterContainer"]
position = Vector2( 136, 266 )
scale = Vector2( 2.5303, 0.517354 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="VBoxContainer/MiddleContainer/CenterContainer"]
position = Vector2( 136, 172 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "average_cat"
frame = 2
playing = true

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/MiddleContainer"]
margin_left = 664.0
margin_right = 864.0
margin_bottom = 390.0

[node name="Confirm" type="Button" parent="VBoxContainer/MiddleContainer/CenterContainer2"]
margin_top = 170.0
margin_right = 200.0
margin_bottom = 220.0
rect_min_size = Vector2( 200, 50 )
flat = true
icon_align = 1

[node name="Label" type="Label" parent="VBoxContainer/MiddleContainer/CenterContainer2/Confirm"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "Confirm >"

[node name="BottomBar" type="AspectRatioContainer" parent="VBoxContainer"]
margin_top = 498.0
margin_right = 1024.0
margin_bottom = 598.0
rect_min_size = Vector2( 0, 100 )
alignment_horizontal = 0

[node name="BottomBanner" type="ColorRect" parent="VBoxContainer/BottomBar"]
margin_right = 900.0
margin_bottom = 100.0
rect_min_size = Vector2( 900, 0 )
color = Color( 0, 0, 0, 0.627451 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar"]
margin_right = 100.0
margin_bottom = 100.0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/BottomBar/HBoxContainer"]
margin_bottom = 100.0

[node name="LevelSelectionMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="VBoxContainer/TopBar/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MiddleContainer/CenterContainer2/Confirm" to="." method="_on_Confirm_pressed"]
